SimpleComplex/Utils 1.x, 2017-09-24
-----------------------------------
- Bootstrap class.
- Release 1.1.

SimpleComplex/Utils 1.x, 2017-09-22
-----------------------------------
- Utils::arrayMergeRecursive() to combine the best of native
  array_replace_recursive() and array_merge_recursive(), and avoid the latter's
  crazy behaviour of dupe associative key scalar values become array.

SimpleComplex/Utils 1.x, 2017-09-19
-----------------------------------
- Utils::mkdir() handles that PHP native mkdir() might not be able
  to use a group-write mode (0770 becames 0750)
  and might fail entirely to set uid or gid.
  That also fixes problems in ensurePath().

SimpleComplex/Utils 1.x, 2017-09-17
-----------------------------------
- Source sub dir reflecting sub namespace must be uppercase (like namespace)
  otherwise PHP composer may fail to autoload.

SimpleComplex/Utils 1.x, 2017-09-10
-----------------------------------
- Utils::getRequestHeader() to support nginx.

SimpleComplex/Utils 1.x, 2017-09-02
-----------------------------------
- Interfaces moved to sub dir/namespace.

SimpleComplex/Utils 1.x, 2017-08-24
-----------------------------------
- CliCommand 'silent' property, controlled by environment var
  PHP_LIB_SIMPLECOMPLEX_UTILS_CLI_SILENT.
- CLI environment general help/-y now list only first line of commands'
  help text.

SimpleComplex/Utils 1.x, 2017-08-23
-----------------------------------
- CLI commands support suppressing strict confirms by setting enviroment var
  PHP_LIB_SIMPLECOMPLEX_UTILS_CLI_SKIP_CONFIRM.

SimpleComplex/Utils 1.x, 2017-08-19
-----------------------------------
- CLI command features do NOT work without Inspect, however CliEnvironment do.
  Suggest Inspect package in composer.json.
- New CLI command 'utils-execute' for executing an include script.
- Utils::cast() object|array to class name.
- Utils->documentRoot() and Utils->pathReplaceDocumentRoot().
- CliEnvironment::getCurrentWorkingDir() and getDocumentRoot()